    - explosions larger than 1kt now have special effects besides just a white flash
    - made it so that setting the stopgapnukes_secondary_blast_damage_amt mod option to -1 disables secondary blast damage
    - added a 120 ton rocket because sometimes a 20 ton nuke is too small and a 1kt nuke is too big.
    - also added a 120 ton cannon shell.
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 05. 04. 2025
  Changes:
    - changed the stack size of nuclear bullets from 200 to 100
    - added a mod setting that allows the user to modify the secondary blast radius damage of the 1kt, 15kt, 500kt and 2mt nukes.
    - took some of the code from True Nukes that makes the explosion effects and put it into this mod. (it's MIT open source license so its ok) (it barely worked)
    - marginally improved the explosion effects of the nuclear bullets
    - tried to improve the explosion effects, didn't actually work very well but the 1kt and above nukes now have MARGINALLY better special effects. perhaps the community will discover ways to help me improve this in future versions.
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 11. 25. 2024
  Changes:
    - fixed an incorrect build menu sort order for the 500kt atomic bomb recipe.
    - updated the recipe string for the 1kt atomic bomb to denote the difference between the heavy water and non-heavy water versions of the recipe.
    - buffed the damage done at the edges of the 20 ton atomic bomb explosion.
    - reduced the amount of uranium-235 required for the 1 ton atomic bombs to 30 because the 1 ton atomic bomb explosion (the vanilla one) is a complete joke. Maybe reducing its cost will at least make it useful in certain situations.
    - added a mod setting so that if you don't agree with the aforementioned balance decision, you can fix it yourself.