@@ -19,6 +19,7 @@ fusion-bomb=Full fusion bomb
 fusion-artillery-shell=100mt Fusion artillery shell
 15kt-nuclear-artillery-shell=15kt fission artillery shell
 500kt-atomic-bomb=500kt boosted fission bomb
+thermonuclear-fuel=Thermonuclear fuel
 
 [item-description]
 15kt-atomic-bomb=A 15kt full nuclear fission bomb in rocket form. This weapon completely obliterates everything in a 1km radius and causes substantial damage to anything within a 4.5km radius. This weapon should never be fired from a handheld rocket launcher. \n[color=#ec0800]!!!Use with extreme caution!!![/color]\n[color=#eeee00]This weapon is so powerful and dangerous that it has little practical use. You will probably die if you use fire this. It is recommended to use 1kt rockets instead.[/color]
@@ -38,6 +39,7 @@ big_atomic_bomb=A boosted tactical nuke in rocket form with a blast yield equiva
 medium_atomic_bomb=A very large tactical nuke in rocket form with a blast equivalent to 120 tons of TNT.
 15kt-nuclear-artillery-shell=A 15kt full nuclear fission bomb packed into an artillery shell. This weapon completely obliterates everything in a 1km radius and causes substantial damage to anything within a 4.5km radius. This weapon is absolutely stupid and whatever you're planning on using this for is probably a really bad idea. \n[color=#ec0800]!!!Use with extreme caution!!![/color]\n[color=#eeee00]This weapon is so powerful and dangerous that it has little practical use. You will probably die if you use fire this. It is recommended to use 1kt rockets and use the Aircraft mod.[/color]
 500kt-atomic-bomb=Approximately 1/4th as powerful as the thermonuclear bomb. It is almost possible for modern pcs to handle this one but seriously you should just use the 15kt atomic bomb instead. The lag is not worth it and the 15kt atomic bomb will destroy entire bases just fine. This vaporizes everything in a 2km radius and damages everything in a 9km radius. 
+thermonuclear-fuel=When your trains have the NEED for SPEED
 
 [recipe-name]
 stopgapnukes_nuclearbullet_recipe=nuclear warhead tipped bullets
@@ -69,18 +71,19 @@ girdler-sulfide-recipe=Heavy water (Girdler Sulfide process)
 fusion-artillery-shell-recipe=Fusion artillery shell
 15kt-artillery-shell-recipe=15kt fission artillery shell
 500kt_atomic_bomb_recipe=500kt boosted fission bomb
+thermonuclear-fuel=Thermonuclear fuel
 
 [recipe-description]
 girdler-sulfide=Uses hydrogen sulfide[fluid=hydrogen-sulfide] to concentrate heavy water[fluid=heavy-water] before boiling it. Much more energy efficient than boiling water[fluid=water] directly
 stopgapnukes_big_atomic_bomb_recipe=Make a boosted fission bomb using heavy water[fluid=heavy-water]
 stopgapnukes_big_atomic_bomb_recipe-neutron-reflectors=Make a boosted fission bomb using neutron reflectors[item=neutron-reflector]. Neutron reflectors are more expensive and harder to get but they're also easier to deal with once you get you the point where you can make them.
-stopgapnukes_medium_atomic_bomb_recipe=Make a boosted fission bomb using heavy water[fluid=heavy-water]
-stopgapnukes_medium_atomic_bomb_recipe-neutron-reflectors=Make a boosted fission bomb using neutron reflectors[item=neutron-reflector]. Neutron reflectors are more expensive and harder to get but they're also easier to deal with once you get you the point where you can make them.
+stopgapnukes_medium_atomic_bomb_recipe=Make a boosted fission bomb using heavy water[fluid=heavy-water] and neutron reflectors[item=neutron-reflector] to reduce the amount of uranium-235[item=uranium-235] required to produce a 120 ton nuclear warhead.
+stopgapnukes_medium_atomic_bomb_recipe-neutron-reflectors=Make a boosted fission bomb using neutron reflectors[item=neutron-reflector].
 stopgapnukes_big_nuclear_cannon_shell_recipe=This compact warhead requires neutron reflectors, but you can reduce the number of neutron reflectors needed by incorporating heavy water[fluid=heavy-water] into the design.
 stopgapnukes_nuclearbullet_recipe=It's possible to craftfully harness the compact destructive power of tritium[fluid=tritium] to make really small tactical nuclear warheads.
 thermonuclear-bomb-recipe=Harness the power of thermonuclear fusion to create a bomb with an estimated blast yield of 2 megatons.
 15kt-artillery-shell-recipe=Make a tightly packed miniature supernuke capable of destroying a stupidly massive area. 15 kilotons of TNT. What the fuck.
-1kt_atomic_bomb_heavywater_recipe=Use heavy water[fluid=heavy-water] to reduce the amount of uranium it takes to build a 1kt atomic bomb.
+1kt_atomic_bomb_heavywater_recipe=Use heavy water[fluid=heavy-water] and neutron reflectors[item=neutron-reflector] to reduce the amount of uranium[item=uranium-235] it takes to build a 1kt atomic bomb.
 500kt_atomic_bomb_recipe=It is possible to improve the efficiency of the standard fission bomb further by filling the core with heavy water[fluid=heavy-water].
 
 [technology-name]
@@ -110,18 +113,21 @@ stopgapnukes_thermobaricpollution_behaviour=Thermobaric/Fuel air bomb pollution 
 stopgapnukes_atomicpollution_behaviour=Atomic bomb pollution multiplier
 stopgapnukes_thermobaric_cliff_radius_behaviour=Thermobaric/Fuel air bomb cliff destroy radius multiplier
 stopgapnukes_atomic_cliff_radius_behaviour=Atomic bomb cliff destroy radius multiplier
-stopgapnukes_basic_heavy_water_time_behaviour=Heavy water crafting time
-stopgapnukes_basic_heavy_water_requirement_behaviour=Heavy water crafting recipe count multiplier
+stopgapnukes_basic_heavy_water_time_behaviour=Heavy water[fluid=heavy-water] crafting time
+stopgapnukes_basic_heavy_water_requirement_behaviour=Heavy water[fluid=heavy-water] crafting recipe count multiplier
 stopgapnukes_advanced_cannon_shell_heavy_water_neutronplates_behaviour=Advanced cannon shell heavy water variant requires neutron reflectors
 stopgapnukes_20t_effects_behaviour=Additional 20 ton explosion special effects
 stopgapnukes_1kt_effects_behaviour=Additional 1kt explosion special effects (NOT RECOMMENDED)
 stopgapnukes_neutronplate_tungsten_behaviour=Use tungsten for neutron plates if running Space Age
-stopgapnukes_medium_nuke_fireball_behaviour=Direct-hit damage for medium nukes
-stopgapnukes_large_nuke_fireball_behaviour=Direct-hit damage for large nukes
-stopgapnukes_superweapon_fireball_behaviour=Direct-hit damage for superweapon-tier nukes
-stopgapnukes_boosted_fission_tech_behaviour=500kt atomic bomb requires thermonuclear research
-stopgapnukes_vanila_recipe_amount_behaviour=Amount uranium-235 required for 1 ton nuke
+stopgapnukes_medium_nuke_fireball_behaviour=Direct-hit damage for medium nukes [item=big_atomic_bomb][item=medium_atomic_bomb][item=1kt-atomic-bomb]
+stopgapnukes_large_nuke_fireball_behaviour=Direct-hit damage for large nukes [item=15kt-atomic-bomb][item=500kt-atomic-bomb]
+stopgapnukes_superweapon_fireball_behaviour=Direct-hit damage for superweapon-tier nukes [item=thermonuclear-bomb][item=fusion-bomb]
+stopgapnukes_boosted_fission_tech_behaviour=500kt atomic bomb[item=500kt-atomic-bomb] requires thermonuclear research
+stopgapnukes_vanila_recipe_amount_behaviour=Amount uranium-235[item=uranium-235] required for 1 ton nuke [item=atomic-bomb][item=nuclear_cannon_shell][item=nuclear_artillery_shell]
 stopgapnukes_secondary_blast_damage_amt=Secondary blast radius max damage
+stopgapnukes_thermonuclear_fuel_acceleration=thermonuclear-fuel[item=thermonuclear-fuel] acceleration multiplier
+stopgapnukes_thermonuclear_fuel_topspeed=thermonuclear-fuel[item=thermonuclear-fuel] top speed multiplier
+stopgapnukes_thermonuclear_fuel_power=thermonuclear-fuel[item=thermonuclear-fuel] power value (GJ)
 
 [mod-setting-description]
 stopgapnukes_thermobaricpollution_behaviour=Multiplier value for pollution for thermobaric/fuel air bombs. Higher values mean more pollution.
@@ -140,3 +146,6 @@ stopgapnukes_superweapon_fireball_behaviour=How much damage to apply to things n
 stopgapnukes_boosted_fission_tech_behaviour=Setting this to false unlocks the 500kt boosted fission bomb with the "advanced nuclear weapons" tech research. Setting this to true unlocks the 500kt boosted fission bomb with the "thermonuclear bomb" tech research.
 stopgapnukes_vanila_recipe_amount_behaviour=In vanilla this value is 30. In space-age this value is 100. The vanilla atomic bomb explosion is a complete joke and not worth 100 uranium, so set this to whatever you want. Values between 1 and 10000 inclusive are accepted.
 stopgapnukes_secondary_blast_damage_amt=If this is set to a number greater than zero (0), the amount of damage done within the secondary blast radius of the 1kt, 15kt, 500kt and 2mt explosions will be limited to this number. If set to -1, the secondary explosion damage will be set to zero (0) for most explosions. Does not modify the damage done in the center fireball of the blast. Not recommended for most players as these explosions are dificult to fine-tune and easy to mess up. If you break your nukes with this just set it back to 0, but post about it too so the issue can get fixed.
+stopgapnukes_thermonuclear_fuel_acceleration=the acceleration multiplier to apply to the thermonuclear-fuel. Min 1.0, max 100000.
+stopgapnukes_thermonuclear_fuel_topspeed=the top speed multiplier to apply to the thermonuclear-fuel. Min 1.0, max 100000.
+stopgapnukes_thermonuclear_fuel_power=the amount of gigajoules (GJ) the thermonuclear fuel comes with. please dont enter stupid stuff like "banana" its numbers only.
